--- a/PyTorch_practice/competition.ipynb
+++ b/PyTorch_practice/competition.ipynb
@@ -2,7 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "8e30a3a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.19.11"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>c:\\Users\\furaf\\Desktop\\haselab-all\\PyTorch_practice\\wandb\\run-20250517_212724-27tol5tj</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj' target=\"_blank\">experiment-20250517-212724</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+      ],
+      "text/plain": [
+       "<wandb.sdk.wandb_run.Run at 0x29d0c7ffca0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "from datetime import datetime\n",
+    "\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "wandb.init(project=\"haselab-conpetition\", name=f\"experiment-{timestamp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "4043a303",
    "metadata": {},
    "outputs": [],
@@ -22,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "633ea1d5",
    "metadata": {},
    "outputs": [],
@@ -82,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0f3c8045",
    "metadata": {},
    "outputs": [],
@@ -110,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "a507e01c",
    "metadata": {},
    "outputs": [],
@@ -118,12 +206,18 @@
     "# ハイパーパラメータを指定\n",
     "epochs = 5\n",
     "lr = 0.001\n",
-    "batch_size = 128"
+    "batch_size = 128\n",
+    "\n",
+    "wandb.config.update({\n",
+    "    \"epochs\": epochs,\n",
+    "    \"learning_rate\": lr,\n",
+    "    \"batch_size\": batch_size\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "53edc45b",
    "metadata": {},
    "outputs": [
@@ -169,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bb863d0a",
    "metadata": {},
    "outputs": [],
@@ -207,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "2e631371",
    "metadata": {},
    "outputs": [],
@@ -247,12 +341,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch   1/  5: train_loss: 1.1930, train_acc: 0.5625\n",
-      "epoch   2/  5: train_loss: 0.6310, train_acc: 0.7658\n",
-      "epoch   3/  5: train_loss: 0.5333, train_acc: 0.7992\n",
-      "epoch   4/  5: train_loss: 0.4602, train_acc: 0.8217\n",
-      "epoch   5/  5: train_loss: 0.4249, train_acc: 0.8392\n"
+      "epoch   1/  5: train_loss: 0.3398, train_acc: 0.8775\n",
+      "epoch   2/  5: train_loss: 0.2880, train_acc: 0.8917\n",
+      "epoch   3/  5: train_loss: 0.3109, train_acc: 0.8900\n",
+      "epoch   4/  5: train_loss: 0.2646, train_acc: 0.9050\n",
+      "epoch   5/  5: train_loss: 0.2555, train_acc: 0.9042\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>▁▅▄██</td></tr><tr><td>train_loss</td><td>█▄▆▂▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>0.90417</td></tr><tr><td>train_loss</td><td>0.25546</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">experiment-20250517-212724</strong> at: <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj</a><br> View project at: <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20250517_212724-27tol5tj\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -260,7 +400,12 @@
     "model = model.to(device)\n",
     "for epoch in range(epochs):\n",
     "    train_loss, train_acc = train_1epoch(model, train_dl, criterion, optimizer, device=device)\n",
-    "    print(f\"epoch {epoch+1:>3}/{epochs:>3}: train_loss: {train_loss:.4f}, train_acc: {train_acc:.4f}\")\n"
+    "    print(f\"epoch {epoch+1:>3}/{epochs:>3}: train_loss: {train_loss:.4f}, train_acc: {train_acc:.4f}\")\n",
+    "\n",
+    "    wandb.log({\"train_accuracy\": train_acc, \"train_loss\": train_loss}) # wandb にログを記録\n",
+    "\n",
+    "wandb.save(f\"model_epoch{epoch+1}.pth\") # wandb にモデルを保存\n",
+    "wandb.finish() # wandb のセッションを終了"
    ]
   },
   {
@@ -284,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "daiki",
+   "display_name": "torch-env",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
