--- a/PyTorch_practice/competition-finetuning.ipynb
+++ b/PyTorch_practice/competition-finetuning.ipynb
@@ -2,7 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "8e30a3a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.19.11"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>c:\\Users\\furaf\\Desktop\\haselab-all\\PyTorch_practice\\wandb\\run-20250517_223359-oi0uxsrm</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm' target=\"_blank\">experiment-20250517-223359</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+      ],
+      "text/plain": [
+       "<wandb.sdk.wandb_run.Run at 0x2199d95f0a0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "from datetime import datetime\n",
+    "\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "wandb.init(project=\"haselab-conpetition\", name=f\"experiment-{timestamp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "4043a303",
    "metadata": {},
    "outputs": [],
@@ -17,12 +105,13 @@
     "from torchvision.datasets import ImageFolder\n",
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import transforms"
+    "from torchvision import transforms\n",
+    "import torch.nn as nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "633ea1d5",
    "metadata": {},
    "outputs": [],
@@ -82,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "0f3c8045",
    "metadata": {},
    "outputs": [],
@@ -110,20 +199,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "a507e01c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ハイパーパラメータを指定\n",
-    "epochs = 5\n",
+    "epochs = 7\n",
     "lr = 0.001\n",
-    "batch_size = 128"
+    "batch_size = 256\n",
+    "\n",
+    "wandb.config.update({\n",
+    "    \"epochs\": epochs,\n",
+    "    \"learning_rate\": lr,\n",
+    "    \"batch_size\": batch_size\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "53edc45b",
    "metadata": {},
    "outputs": [
@@ -140,23 +235,23 @@
     "num_classes = 4\n",
     "\n",
     "train_tf = torchvision.transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.3, 0.3, 0.3], std=[0.3, 0.3, 0.3])\n",
+    "    transforms.ToTensor(),                                        #?追加で反転とか\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "test_tf = torchvision.transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.3, 0.3, 0.3], std=[0.3, 0.3, 0.3])\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]) #?平均と重みを事前訓練時の値に変更\n",
     "])\n",
     "\n",
     "train_ds = ImageFolder(root=dataset_dir + \"/train_val\", transform=train_tf)\n",
     "test_ds = TestDataset(path=dataset_dir + \"/test\", transform=test_tf)\n",
     "\n",
     "train_dl = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True)\n",
-    "test_dl = DataLoader(test_ds, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True)\n",
+    "test_dl = DataLoader(test_ds, batch_size=batch_size, shuffle=False, num_workers=0, pin_memory=True)\n",
     "\n",
-    "#model = torchvision.models.resnet18(num_classes=num_classes) # 事前学習済みモデルを使用しない重みはランダム初期化\n",
+    "# model = torchvision.models.resnet18(num_classes=num_classes) # 事前学習済みモデルを使用しない重みはランダム初期化\n",
     "\n",
-    "model = models.resnet18(pretrained=True) # 事前学習済みモデルを使用する。ファインチューニング\n",
+    "model = torchvision.models.resnet18(weights=torchvision.models.ResNet18_Weights.DEFAULT) # 事前学習済みモデルを使用する。ファインチューニング\n",
     "num_ftrs = model.fc.in_features # 元の全結合層の入力特徴数を入手\n",
     "model.fc = nn.Linear(num_ftrs, 10) # 全結合層を新しく定義\n",
     "\n",
@@ -169,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "bb863d0a",
    "metadata": {},
    "outputs": [],
@@ -207,11 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "2e631371",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "# 推論フローを定義\n",
     "def pred(model, test_dl, device, probs=False, categorize=False):\n",
     "    total_outputs = []\n",
@@ -219,7 +316,14 @@
     "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for inputs, labels in test_dl:\n",
+    "        print(\"推論ループが開始された\")\n",
+    "        loop_start_time = time.time() #ループ開始時刻\n",
+    "\n",
+    "\n",
+    "        for i, (inputs, labels) in enumerate(test_dl):\n",
+    "            print(f\"Processing batch {i+1}/{len(test_dl)}...\")\n",
+    "            batch_start_time = time.time() #バッチ開始時刻\n",
+    "\n",
     "            inputs = inputs.to(device)\n",
     "\n",
     "            outputs = model(inputs)\n",
@@ -232,6 +336,16 @@
     "\n",
     "            total_outputs.append(outputs)\n",
     "            all_labels.extend(labels)\n",
+    "            \n",
+    "            batch_end_time = time.time() #バッチ終了時刻\n",
+    "            if (i + 1) % 10 == 0: # 10バッチごとに進捗を表示\n",
+    "                print(f\"Processed batch {i+1}/{len(test_dl)}, time per batch: {batch_end_time - batch_start_time:.4f}s\")\n",
+    "\n",
+    "        loop_end_time = time.time()\n",
+    "        print(f\"Prediction loop finished in {loop_end_time - loop_start_time:.2f} seconds.\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "    outputs = torch.cat(total_outputs, dim=0).cpu().tolist()\n",
     "    return outputs, all_labels"
@@ -239,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "9c69e37e",
    "metadata": {},
    "outputs": [
@@ -247,12 +361,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch   1/  5: train_loss: 1.1930, train_acc: 0.5625\n",
-      "epoch   2/  5: train_loss: 0.6310, train_acc: 0.7658\n",
-      "epoch   3/  5: train_loss: 0.5333, train_acc: 0.7992\n",
-      "epoch   4/  5: train_loss: 0.4602, train_acc: 0.8217\n",
-      "epoch   5/  5: train_loss: 0.4249, train_acc: 0.8392\n"
+      "epoch   1/  7: train_loss: 1.2974, train_acc: 0.6083\n",
+      "epoch   2/  7: train_loss: 0.3006, train_acc: 0.8950\n",
+      "epoch   3/  7: train_loss: 0.2250, train_acc: 0.9133\n",
+      "epoch   4/  7: train_loss: 0.1788, train_acc: 0.9350\n",
+      "epoch   5/  7: train_loss: 0.1282, train_acc: 0.9542\n",
+      "epoch   6/  7: train_loss: 0.1091, train_acc: 0.9542\n",
+      "epoch   7/  7: train_loss: 0.1043, train_acc: 0.9575\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>▁▇▇████</td></tr><tr><td>train_loss</td><td>█▂▂▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>0.9575</td></tr><tr><td>train_loss</td><td>0.10428</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">experiment-20250517-223359</strong> at: <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm</a><br> View project at: <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20250517_223359-oi0uxsrm\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -260,18 +422,42 @@
     "model = model.to(device)\n",
     "for epoch in range(epochs):\n",
     "    train_loss, train_acc = train_1epoch(model, train_dl, criterion, optimizer, device=device)\n",
-    "    print(f\"epoch {epoch+1:>3}/{epochs:>3}: train_loss: {train_loss:.4f}, train_acc: {train_acc:.4f}\")\n"
+    "    print(f\"epoch {epoch+1:>3}/{epochs:>3}: train_loss: {train_loss:.4f}, train_acc: {train_acc:.4f}\")\n",
+    "\n",
+    "    wandb.log({\"train_accuracy\": train_acc, \"train_loss\": train_loss}) # wandb にログを記録\n",
+    "\n",
+    "wandb.save(f\"model_epoch{epoch+1}.pth\") # wandb にモデルを保存\n",
+    "wandb.finish() # wandb のセッションを終了"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8aa41216",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "推論ループが開始された\n",
+      "Processing batch 1/9...\n",
+      "Processing batch 2/9...\n",
+      "Processing batch 3/9...\n",
+      "Processing batch 4/9...\n",
+      "Processing batch 5/9...\n",
+      "Processing batch 6/9...\n",
+      "Processing batch 7/9...\n",
+      "Processing batch 8/9...\n",
+      "Processing batch 9/9...\n",
+      "Prediction loop finished in 0.89 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "# 推論・結果をCSV形式で保存\n",
-    "csv_name = \"predictions.csv\"\n",
+    "\n",
+    "csv_name = f\"result/predictions{timestamp}.csv\"\n",
     "\n",
     "outputs, all_labels = pred(model, test_dl, device, categorize=True)\n",
     "lines = [f\"{l},{o}\" for o, l in zip(outputs, all_labels)]\n",
@@ -284,7 +470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "daiki",
+   "display_name": "torch-env",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
