--- a/PyTorch_practice/competition-finetuning.ipynb
+++ b/PyTorch_practice/competition-finetuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "8e30a3a1",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\furaf\\Desktop\\haselab-all\\PyTorch_practice\\wandb\\run-20250517_223359-oi0uxsrm</code>"
+       "Run data is saved locally in <code>c:\\Users\\furaf\\Desktop\\haselab-all\\PyTorch_practice\\wandb\\run-20250517_230217-71gt85k1</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm' target=\"_blank\">experiment-20250517-223359</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/71gt85k1' target=\"_blank\">experiment-20250517-230217</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm</a>"
+       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/71gt85k1' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/71gt85k1</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -69,13 +69,13 @@
     {
      "data": {
       "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/71gt85k1?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
       ],
       "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x2199d95f0a0>"
+       "<wandb.sdk.wandb_run.Run at 0x1859194c5b0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "4043a303",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "633ea1d5",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "0f3c8045",
    "metadata": {},
    "outputs": [],
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "a507e01c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ハイパーパラメータを指定\n",
-    "epochs = 7\n",
-    "lr = 0.001\n",
+    "epochs = 10\n",
+    "lr = 0.0001\n",
     "batch_size = 256\n",
     "\n",
     "wandb.config.update({\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "53edc45b",
    "metadata": {},
    "outputs": [
@@ -235,10 +235,17 @@
     "num_classes = 4\n",
     "\n",
     "train_tf = torchvision.transforms.Compose([\n",
+    "    transforms.RandomResizedCrop(224), #?224x224にリサイズ\n",
+    "    transforms.RandomHorizontalFlip(), #?ランダムに反転\n",
+    "    transforms.RandomRotation(10), #?ランダムに回転\n",
+    "\n",
     "    transforms.ToTensor(),                                        #?追加で反転とか\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "test_tf = torchvision.transforms.Compose([\n",
+    "    transforms.Resize(256), #?256x256にリサイズ\n",
+    "    transforms.CenterCrop(224), #?224x224にクロップ\n",
+    "\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]) #?平均と重みを事前訓練時の値に変更\n",
     "])\n",
@@ -264,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "bb863d0a",
    "metadata": {},
    "outputs": [],
@@ -302,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "2e631371",
    "metadata": {},
    "outputs": [],
@@ -353,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "9c69e37e",
    "metadata": {},
    "outputs": [
@@ -361,13 +368,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch   1/  7: train_loss: 1.2974, train_acc: 0.6083\n",
-      "epoch   2/  7: train_loss: 0.3006, train_acc: 0.8950\n",
-      "epoch   3/  7: train_loss: 0.2250, train_acc: 0.9133\n",
-      "epoch   4/  7: train_loss: 0.1788, train_acc: 0.9350\n",
-      "epoch   5/  7: train_loss: 0.1282, train_acc: 0.9542\n",
-      "epoch   6/  7: train_loss: 0.1091, train_acc: 0.9542\n",
-      "epoch   7/  7: train_loss: 0.1043, train_acc: 0.9575\n"
+      "epoch   1/ 10: train_loss: 1.9519, train_acc: 0.4383\n",
+      "epoch   2/ 10: train_loss: 0.8650, train_acc: 0.7775\n",
+      "epoch   3/ 10: train_loss: 0.6218, train_acc: 0.8258\n",
+      "epoch   4/ 10: train_loss: 0.5145, train_acc: 0.8433\n",
+      "epoch   5/ 10: train_loss: 0.4596, train_acc: 0.8583\n",
+      "epoch   6/ 10: train_loss: 0.3943, train_acc: 0.8683\n",
+      "epoch   7/ 10: train_loss: 0.3556, train_acc: 0.8733\n",
+      "epoch   8/ 10: train_loss: 0.3882, train_acc: 0.8667\n",
+      "epoch   9/ 10: train_loss: 0.3168, train_acc: 0.8892\n",
+      "epoch  10/ 10: train_loss: 0.3363, train_acc: 0.8792\n"
      ]
     },
     {
@@ -383,7 +393,7 @@
     {
      "data": {
       "text/html": [
-       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>▁▇▇████</td></tr><tr><td>train_loss</td><td>█▂▂▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>0.9575</td></tr><tr><td>train_loss</td><td>0.10428</td></tr></table><br/></div></div>"
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>▁▆▇▇██████</td></tr><tr><td>train_loss</td><td>█▃▂▂▂▁▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>0.87917</td></tr><tr><td>train_loss</td><td>0.33626</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -395,7 +405,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">experiment-20250517-223359</strong> at: <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/oi0uxsrm</a><br> View project at: <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">experiment-20250517-230217</strong> at: <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/71gt85k1' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/71gt85k1</a><br> View project at: <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -407,7 +417,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20250517_223359-oi0uxsrm\\logs</code>"
+       "Find logs at: <code>.\\wandb\\run-20250517_230217-71gt85k1\\logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -432,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "8aa41216",
    "metadata": {},
    "outputs": [
@@ -450,7 +460,7 @@
       "Processing batch 7/9...\n",
       "Processing batch 8/9...\n",
       "Processing batch 9/9...\n",
-      "Prediction loop finished in 0.89 seconds.\n"
+      "Prediction loop finished in 3.24 seconds.\n"
      ]
     }
    ],
