--- a/PyTorch_practice/competition.ipynb
+++ b/PyTorch_practice/competition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "8e30a3a1",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\furaf\\Desktop\\haselab-all\\PyTorch_practice\\wandb\\run-20250517_212724-27tol5tj</code>"
+       "Run data is saved locally in <code>c:\\Users\\furaf\\Desktop\\haselab-all\\PyTorch_practice\\wandb\\run-20250517_225128-f680wsa8</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj' target=\"_blank\">experiment-20250517-212724</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/f680wsa8' target=\"_blank\">experiment-20250517-225128</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj</a>"
+       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/f680wsa8' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/f680wsa8</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -69,13 +69,13 @@
     {
      "data": {
       "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/27tol5tj?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/f680wsa8?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
       ],
       "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x29d0c7ffca0>"
+       "<wandb.sdk.wandb_run.Run at 0x29d0c7ff280>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "4043a303",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "633ea1d5",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "0f3c8045",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "a507e01c",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "53edc45b",
    "metadata": {},
    "outputs": [
