--- a/PyTorch_practice/backup copy.ipynb
+++ b/PyTorch_practice/backup copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 235,
    "id": "8e30a3a1",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>e:\\haselab-all\\PyTorch_practice\\wandb\\run-20250519_172202-tgbli5d0</code>"
+       "Run data is saved locally in <code>e:\\haselab-all\\PyTorch_practice\\wandb\\run-20250519_184226-vam1r6ft</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/tgbli5d0' target=\"_blank\">experiment-20250519-172202</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/vam1r6ft' target=\"_blank\">experiment-20250519-184226</a></strong> to <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/tgbli5d0' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/tgbli5d0</a>"
+       " View run at <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/vam1r6ft' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/vam1r6ft</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -69,13 +69,13 @@
     {
      "data": {
       "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/tgbli5d0?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/fukui-university/haselab-conpetition/runs/vam1r6ft?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
       ],
       "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x18c90fc45b0>"
+       "<wandb.sdk.wandb_run.Run at 0x18c9108a290>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 236,
    "id": "4043a303",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 237,
    "id": "633ea1d5",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 238,
    "id": "0f3c8045",
    "metadata": {},
    "outputs": [],
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 239,
    "id": "a507e01c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ハイパーパラメータを指定\n",
-    "epochs = 16\n",
+    "epochs = 8\n",
     "lr = 0.001\n",
-    "batch_size = 256\n",
+    "batch_size = 128\n",
     "\n",
     "wandb.config.update({\n",
     "    \"epochs\": epochs,\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 240,
    "id": "4733d10e",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "id": "53edc45b",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
     "num_classes = 4\n",
     "\n",
     "train_tf = torchvision.transforms.Compose([\n",
-    "    RandomResizedCrop(224, scale=(0.8, 1.0))\n",
+    " \n",
     "    transforms.RandomRotation(15), #?ランダムに回転\n",
     "    \n",
     "    transforms.ToTensor(),                                        #?追加で反転とか\n",
@@ -328,8 +328,8 @@
     "\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=5e-4) #? \n",
-    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.9) #? 学習率を0.9倍にするスケジューラ\n",
-    "\n",
+    "#scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.9) #? 学習率を0.9倍にするスケジューラ\n",
+    "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=10)\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"using device : \" + ( \"GPU\" if device.type == \"cuda\" else \"CPU\" )) #どっちつかってるか確認"
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 242,
    "id": "bb863d0a",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 243,
    "id": "af2dfba4",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 244,
    "id": "2e631371",
    "metadata": {},
    "outputs": [],
@@ -458,28 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 245,
    "id": "4ab3e118",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\furaf\\anaconda3\\envs\\torch-env\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:62: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
-    "    optimizer, mode='min', factor=0.5, patience=2, verbose=True\n",
-    ")"
+    "# scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
+    "#     optimizer, mode='min', factor=0.5, patience=2, verbose=True\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 246,
    "id": "9c69e37e",
    "metadata": {},
    "outputs": [
@@ -487,38 +478,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch   1/ 16: train_loss: 1.2507, train_acc: 0.5958\n",
-      "epoch   1/ 16: val_loss: 3.1548, val_acc: 0.5375\n",
-      "epoch   2/ 16: train_loss: 0.3920, train_acc: 0.8646\n",
-      "epoch   2/ 16: val_loss: 6.2339, val_acc: 0.6500\n",
-      "epoch   3/ 16: train_loss: 0.3506, train_acc: 0.8760\n",
-      "epoch   3/ 16: val_loss: 5.9077, val_acc: 0.6458\n",
-      "epoch   4/ 16: train_loss: 0.2198, train_acc: 0.9177\n",
-      "epoch   4/ 16: val_loss: 1.5213, val_acc: 0.7208\n",
-      "epoch   5/ 16: train_loss: 0.1938, train_acc: 0.9177\n",
-      "epoch   5/ 16: val_loss: 1.8073, val_acc: 0.7083\n",
-      "epoch   6/ 16: train_loss: 0.1357, train_acc: 0.9573\n",
-      "epoch   6/ 16: val_loss: 0.9187, val_acc: 0.8083\n",
-      "epoch   7/ 16: train_loss: 0.1169, train_acc: 0.9594\n",
-      "epoch   7/ 16: val_loss: 0.9538, val_acc: 0.8500\n",
-      "epoch   8/ 16: train_loss: 0.0856, train_acc: 0.9677\n",
-      "epoch   8/ 16: val_loss: 0.6444, val_acc: 0.8542\n",
-      "epoch   9/ 16: train_loss: 0.0927, train_acc: 0.9667\n",
-      "epoch   9/ 16: val_loss: 0.5362, val_acc: 0.9042\n",
-      "epoch  10/ 16: train_loss: 0.0828, train_acc: 0.9635\n",
-      "epoch  10/ 16: val_loss: 0.5709, val_acc: 0.8958\n",
-      "epoch  11/ 16: train_loss: 0.0628, train_acc: 0.9781\n",
-      "epoch  11/ 16: val_loss: 0.5714, val_acc: 0.9042\n",
-      "epoch  12/ 16: train_loss: 0.0785, train_acc: 0.9729\n",
-      "epoch  12/ 16: val_loss: 1.0285, val_acc: 0.8000\n",
-      "epoch  13/ 16: train_loss: 0.0880, train_acc: 0.9719\n",
-      "epoch  13/ 16: val_loss: 0.6340, val_acc: 0.8875\n",
-      "epoch  14/ 16: train_loss: 0.0683, train_acc: 0.9750\n",
-      "epoch  14/ 16: val_loss: 0.6273, val_acc: 0.8750\n",
-      "epoch  15/ 16: train_loss: 0.0423, train_acc: 0.9844\n",
-      "epoch  15/ 16: val_loss: 0.5239, val_acc: 0.8833\n",
-      "epoch  16/ 16: train_loss: 0.0296, train_acc: 0.9927\n",
-      "epoch  16/ 16: val_loss: 0.5300, val_acc: 0.9042\n"
+      "epoch   1/  8: train_loss: 0.8805, train_acc: 0.7042\n",
+      "epoch   1/  8: val_loss: 0.9711, val_acc: 0.7625\n",
+      "epoch   2/  8: train_loss: 0.3461, train_acc: 0.8646\n",
+      "epoch   2/  8: val_loss: 2.4562, val_acc: 0.6500\n",
+      "epoch   3/  8: train_loss: 0.2743, train_acc: 0.9000\n",
+      "epoch   3/  8: val_loss: 0.6369, val_acc: 0.8583\n",
+      "epoch   4/  8: train_loss: 0.1863, train_acc: 0.9385\n",
+      "epoch   4/  8: val_loss: 0.6672, val_acc: 0.8458\n",
+      "epoch   5/  8: train_loss: 0.1741, train_acc: 0.9323\n",
+      "epoch   5/  8: val_loss: 0.4177, val_acc: 0.8958\n",
+      "epoch   6/  8: train_loss: 0.1568, train_acc: 0.9354\n",
+      "epoch   6/  8: val_loss: 0.4131, val_acc: 0.9042\n",
+      "epoch   7/  8: train_loss: 0.1115, train_acc: 0.9531\n",
+      "epoch   7/  8: val_loss: 0.3352, val_acc: 0.8958\n",
+      "epoch   8/  8: train_loss: 0.0993, train_acc: 0.9615\n",
+      "epoch   8/  8: val_loss: 0.3410, val_acc: 0.9000\n"
      ]
     },
     {
@@ -534,7 +509,7 @@
     {
      "data": {
       "text/html": [
-       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>▁▆▆▇▇▇▇██▇██████</td></tr><tr><td>train_loss</td><td>█▃▃▂▂▂▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>val_accuracy</td><td>▁▃▃▅▄▆▇▇███▆█▇██</td></tr><tr><td>val_loss</td><td>▄██▂▃▁▂▁▁▁▁▂▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>0.99271</td></tr><tr><td>train_loss</td><td>0.02964</td></tr><tr><td>val_accuracy</td><td>0.90417</td></tr><tr><td>val_loss</td><td>0.53005</td></tr></table><br/></div></div>"
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>▁▅▆▇▇▇██</td></tr><tr><td>train_loss</td><td>█▃▃▂▂▂▁▁</td></tr><tr><td>val_accuracy</td><td>▄▁▇▆████</td></tr><tr><td>val_loss</td><td>▃█▂▂▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_accuracy</td><td>0.96146</td></tr><tr><td>train_loss</td><td>0.09929</td></tr><tr><td>val_accuracy</td><td>0.9</td></tr><tr><td>val_loss</td><td>0.341</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -546,7 +521,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">experiment-20250519-172202</strong> at: <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/tgbli5d0' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/tgbli5d0</a><br> View project at: <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">experiment-20250519-184226</strong> at: <a href='https://wandb.ai/fukui-university/haselab-conpetition/runs/vam1r6ft' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition/runs/vam1r6ft</a><br> View project at: <a href='https://wandb.ai/fukui-university/haselab-conpetition' target=\"_blank\">https://wandb.ai/fukui-university/haselab-conpetition</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -558,7 +533,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20250519_172202-tgbli5d0\\logs</code>"
+       "Find logs at: <code>.\\wandb\\run-20250519_184226-vam1r6ft\\logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -578,8 +553,9 @@
     "    val_loss, val_acc = validate_1epoch(model, val_dl, criterion, device=device)\n",
     "    print(f\"epoch {epoch+1:>3}/{epochs:>3}: val_loss: {val_loss:.4f}, val_acc: {val_acc:.4f}\")\n",
     "    \n",
-    "    if scheduler is not None:                           # 学習率スケジューラが指定されている場合\n",
-    "        scheduler.step(val_loss)                                # 学習率を更新\n",
+    "    if scheduler is not None:\n",
+    "        scheduler.step()                           # 学習率スケジューラが指定されている場合\n",
+    "        #scheduler.step(val_loss)                                # 学習率を更新\n",
     "\n",
     "    wandb.log({\"val_accuracy\": val_acc, \"val_loss\": val_loss}) # wandb にログを記録\n",
     "    wandb.log({\"train_accuracy\": train_acc, \"train_loss\": train_loss}) # wandb にログを記録\n",
@@ -590,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 247,
    "id": "8aa41216",
    "metadata": {},
    "outputs": [
@@ -599,16 +575,25 @@
      "output_type": "stream",
      "text": [
       "推論ループが開始された\n",
-      "Processing batch 1/9...\n",
-      "Processing batch 2/9...\n",
-      "Processing batch 3/9...\n",
-      "Processing batch 4/9...\n",
-      "Processing batch 5/9...\n",
-      "Processing batch 6/9...\n",
-      "Processing batch 7/9...\n",
-      "Processing batch 8/9...\n",
-      "Processing batch 9/9...\n",
-      "Prediction loop finished in 0.99 seconds.\n"
+      "Processing batch 1/17...\n",
+      "Processing batch 2/17...\n",
+      "Processing batch 3/17...\n",
+      "Processing batch 4/17...\n",
+      "Processing batch 5/17...\n",
+      "Processing batch 6/17...\n",
+      "Processing batch 7/17...\n",
+      "Processing batch 8/17...\n",
+      "Processing batch 9/17...\n",
+      "Processing batch 10/17...\n",
+      "Processed batch 10/17, time per batch: 0.0020s\n",
+      "Processing batch 11/17...\n",
+      "Processing batch 12/17...\n",
+      "Processing batch 13/17...\n",
+      "Processing batch 14/17...\n",
+      "Processing batch 15/17...\n",
+      "Processing batch 16/17...\n",
+      "Processing batch 17/17...\n",
+      "Prediction loop finished in 0.89 seconds.\n"
      ]
     }
    ],
