--- a/30_ソースコード/100_実験/CNN解析.ipynb
+++ b/30_ソースコード/100_実験/CNN解析.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -84,14 +84,14 @@
         "    def __init__(self):\n",
         "        super(ConvAutoencoder, self).__init__()\n",
         "        # エンコーダ\n",
-        "        self.encoder = nn.Sequential(\n",
+        "        self.encoder = nn.Sequential( # 入力チャネル数、出力チャネル数（フィルタの数）、カーネルサイズ（フィルタサイズ3*3）\n",
         "            nn.Conv2d(1, 16, 3, stride=2, padding=1), # -> 16x14x14\n",
         "            nn.ReLU(),\n",
         "            nn.Conv2d(16, 32, 3, stride=2, padding=1), # -> 32x7x7\n",
         "            nn.ReLU(),\n",
         "            nn.Conv2d(32, 64, 7) # -> 64x1x1 (これが潜在空間)\n",
         "        )\n",
-        "        # デコーダ\n",
+        "        # デコーダ ここで復元方法をフィルター（重み）が学習する\n",
         "        self.decoder = nn.Sequential(\n",
         "            nn.ConvTranspose2d(64, 32, 7), # -> 32x7x7\n",
         "            nn.ReLU(),\n",
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -222,6 +222,7 @@
         "    img = img.unsqueeze(0).to(device)\n",
         "    recon, _ = model(img)\n",
         "\n",
+        "#GPU上の勾配計算用テンソルを、CPU上の画像表示用NumPy配列に変換する\n",
         "    axes[0, i].imshow(img.cpu().squeeze().numpy(), cmap='gray')\n",
         "    axes[0, i].set_title(\"Normal (Orig)\")\n",
         "    axes[0, i].axis('off')\n",
@@ -247,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -282,6 +283,7 @@
         "        # 正常(7)なら1, 異常なら0\n",
         "        labels.append((label == normal_class).long())\n",
         "\n",
+        "#一つの大きなまとまりに結合\n",
         "latents = torch.cat(latents).numpy()\n",
         "labels = torch.cat(labels).numpy()\n",
         "\n",
